2009-09-20  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Do not crash when MemberLookup returns something
	that is not a MemberExpr here.   Report error 582 instead. 

	Fixes #499988.

2009-09-18  Marek Safar  <marek.safar@gmail.com>

	* decl.cs, class.cs: Check protected property accessors.

2009-09-18  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, assign.cs: Dynamic compound assignment.

2009-09-17  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Fixed compound assignment explicit conversion.

2009-09-17  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: Cannot infer variables from method group.

2009-09-16  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, convert.cs, context.cs, anonymous.cs,
	constant.cs, nullable.cs, expression.cs, literal.cs, ecore.cs,
	codegen.cs: Dynamic binary operations scaffolding.

2009-09-15  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Fixes nullable promotion for enum type variables.

2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* driver.cs, dynamic.cs: Reset more static variables.

2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, expression.cs, rootcontext.cs, namespace.cs, ecore.cs,
	driver.cs: Introduced Expression::MakeExpression.

2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* eval.cs: Exposed MessageOutput instead of cleaning up eval API.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	* eval.cs, report.cs: Use Console.Out for all eval error or warning
	output.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #518707
	* expression.cs (Is): Optimize only generic parameter type
	expression probing value type generic parameter.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #532571
	* ecore.cs: Check for simple name type arguments used with
	non-generic type.

2009-09-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #497421